Carrito.css modificado

--- a/app/templates/carrito.html
+++ b/app/templates/carrito.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <h1>Tu carrito</h1>
+        <h1>Carrito</h1>
         {% if carrito.pedidos_guardados.all %}
         <ul class="pedido-lista">
             {% for pedido in pedidos %}
