--- a/app/static/carrito.css
+++ b/app/static/carrito.css
@@ -9,13 +9,14 @@ body {
 
 .container {
     width: 90%;
-    max-width: 600px;
+    max-width: 750px; /* Aumenta el tamaño máximo a 800px */
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 20px;
+    padding: 30px; /* Aumenta el padding para un espacio más amplio */
     text-align: center;
 }
+
 
 h1 {
     font-size: 24px;
@@ -28,6 +29,11 @@ h2 {
     color: #555555;
     margin-top: 20px;
     text-align: left;
+}
+
+.pedido-numero {
+    font-size: 25px;
+    color: #555555;
 }
 
 ul {
@@ -44,6 +50,11 @@ ul {
 
 .ingrediente-precio {
     color: #666666;
+}
+
+.ingredientes-lista {
+    padding: 10px;
+    border-bottom: 1px solid #eaeaea;
 }
 
 .total {
@@ -70,8 +81,10 @@ button, .btn {
     font-size: 16px;
     cursor: pointer;
     text-decoration: none;
+    transition: background-color 0.3s ease;
 }
 
 button:hover, .btn:hover {
     background-color: #e1b10f;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
